--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,29 @@
 <div class="row align-center mb-5">
   <div class="col-md-6">
     <!-- Call the helper function with triple brackets to render the span as HTML -->
-    <h2>{{{get_emoji}}} Test User</h2>
+    <h2>{{{get_emoji}}} Login to see the highest score  </h2>
+  </div>
+  <div class="col-md-6">
+    <h3><a href=></a></h3>
+    <div>
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="username">
+
+    <label for="pass">Password (8 characters minimum):</label>
+    <input type="password" id="pass" name="password"
+           minlength="8" required>
+</div>
+
+<input type="submit" value="Login">
+<span> Or </span>
+<input type="submit" value="Sign up">
+
+
+  </div>
+</div>
+<div class="row align-center mb-5">
+  <div class="col-md-6">
+    <h2>{{{get_emoji}}} Test</h2>
   </div>
   <div class="col-md-6">
     <h3><a href=></a></h3>
@@ -9,15 +31,7 @@
 </div>
 <div class="row align-center mb-5">
   <div class="col-md-6">
-    <h2>{{{get_emoji}}} Test User</h2>
-  </div>
-  <div class="col-md-6">
-    <h3><a href=></a></h3>
-  </div>
-</div>
-<div class="row align-center mb-5">
-  <div class="col-md-6">
-    <h2>{{{get_emoji}}} Test User</h2>
+    <h2>{{{get_emoji}}} Test</h2>
   </div>
   <div class="col-md-6">
     <h3><a href=></a></h3>
