--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
 <body>
   <header class="display-flex justify-space-between align-center p-2">
     <h1>
-      User Registry
+      Welcome To Big-Bad-Brian-Blender
     </h1>
     {{#if logged_in}}
     <nav>
