--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,5 +13,12 @@
     <button class="btn btn-primary" type="submit">login</button>
   </div>
 </form>
+<label for="drop-down">DropDown:</label>
+<select name="drop-down" id="drop-down">
+  <option value="one">One</option>
+  <option value="two">Two</option>
+  <option value="three">Three</option>
+</select>
 
-<script src="../../js/login.js"></script>
+
+<script src="/js/login.js"></script>
