--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,31 +9,13 @@
     <label for="username">Username:</label>
     <input type="text" id="username" name="username">
 
-    <label for="pass">Password (8 characters minimum):</label>
-    <input type="password" id="pass" name="password"
-           minlength="8" required>
+    <label for="pass">Password:</label>
+    <input type="password" id="pass" name="password">
 </div>
 
 <input type="submit" value="Login">
 <span> Or </span>
 <input type="submit" value="Sign up">
 
-
-  </div>
 </div>
-<div class="row align-center mb-5">
-  <div class="col-md-6">
-    <h2>{{{get_emoji}}} Test</h2>
-  </div>
-  <div class="col-md-6">
-    <h3><a href=></a></h3>
-  </div>
-</div>
-<div class="row align-center mb-5">
-  <div class="col-md-6">
-    <h2>{{{get_emoji}}} Test</h2>
-  </div>
-  <div class="col-md-6">
-    <h3><a href=></a></h3>
-  </div>
 </div>
