add the home and signin routes plus making handlebars better with some CSS

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,15 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Big-Bad-Brian-Blender</title>
+  <title>Big-Bad-Brain-Blender</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
   <header class="display-flex justify-space-between align-center p-2">
-    <h1>
-      Welcome To Big-Bad-Brian-Blender
-    </h1>
+    <h3>
+      Welcome To Big-Bad-Brain-Blender
+    </h3>
     {{#if logged_in}}
     <nav>
       <button class="btn" id="logout">logout</button>
@@ -23,9 +23,6 @@
     {{{ body }}}
   </main>
   <footer>
-    <div>
-      <span>Test</span>
-    </div>
       
   </footer>
 
