--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,7 @@
-<h2>Login</h2>
-
+<h1>{{{get_emoji}}} Login to see the highest score  </h1>
+<link rel="stylesheet" href="/css/style.css">
 <form class="form login-form">
+  
   <div class="form-group">
     <label for="email-login">email:</label>
     <input class="form-input" type="text" id="email-login" />
@@ -13,6 +14,10 @@
     <button class="btn btn-primary" type="submit">login</button>
   </div>
 </form>
+ <div class="signup">
+    <button class="btn btn-primary" type="submit">Signup</button>
+  </div>
+  <h4>Brought to you by: Thair,  Pat,  Sam and  Eddi</h4>
 
 
 <script src="/js/login.js"></script>
