--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -12,5 +12,6 @@
         <a class="login-link" href="/login">Log in instead</a>
       </form>
     </div>
+    <span>Brought to by:Thair, Pat, Sam and Eddi</span>
 
 <script src="/js/signup.js"></script>
