--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,74 +1,76 @@
 html {
-<<<<<<< HEAD
-    line-height: 1.15;
-    -webkit-text-size-adjust: 100%;
-    
-  }
-  
-  body {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 5%;
-    margin-top: auto;
-  }
-  
-  main {
-    display: block;
-    flex-wrap: wrap;
-    margin-left: 10px;
-    justify-content: center;
-    
-
-  }
-  
-  h2 {
-    display: flex;
-    flex-wrap: wrap;
-    font-size: 1em;
-    justify-content: center;
-    color: rgb(222, 10, 10);
-  }
-  
-  label {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 0px;
-    font: .9rem 'Fira Sans', sans-serif;
-
-  }
-
-
-input[type='submit'],
-label {
-    margin-top: 1rem;
-    box-shadow: 10px;
-    cursor: pointer;
-
-}
-=======
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
-  
 }
 
 body {
-  margin: 0;
-}
-
-body {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 5%;
+  margin-top: auto;
   background-image: url("../Assets/landscape-minimal-stars-cold-5k-817931564");
   background-size: cover;
   background-repeat: no-repeat;
 }
-  
-  h2 {
-    font-size: 3em;
-    margin: 0.67em 0;
-  }
-  
-  h2 {
-    box-sizing: content-box;
-    height: 0;
-    overflow: visible;
->>>>>>> 7520f4480261937715f90be7af70e810d4879512
+
+main {
+  display: block;
+  flex-wrap: wrap;
+  margin-left: 10px;
+  justify-content: center;
+}
+
+h1 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  color: rgb(71, 2, 2);
+}
+
+h2 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  color: rgb(55, 1, 1);
+  font-size: 3em;
+  margin: 0.67em 0;
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+}
+h3 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-size: 3em;
+
+}
+h4 {
+  margin-top: 50%;
+  color:whitesmoke;
+}
+
+label {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 0px;
+  font: 0.9rem "Fira Sans", sans-serif;
+}
+
+
+
+input[type="submit"],
+label {
+  margin-top: 1rem;
+  box-shadow: 10px;
+  cursor: pointer;
+
+}
+.start{
+  margin-top: 2%;
+}
+
+.score {
+margin-top: 10%;
+}
