quiz rendering available, able to cycle through quiz questions and render results page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Big-Bad-Brian-Blender</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -27,8 +27,9 @@
   </footer>
 
   {{#if logged_in}}
-  <script src="../../js/logout.js"></script>
+  <script src="/js/logout.js"></script>
   {{/if}}
+  <script src="/js/script.js"></script>
 </body>
 
 
