user able to login, signin, render quiz, cycle through quiz, and display results

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,22 +4,22 @@
   </div>
   <div class="col-md-6">
     <h3><a href=></a></h3>
-<section class="question">
-  <label for="drop-down">Choose Category: 
-   <select name="drop-down" id="drop-down">
-   <option value="his">History</option>
-   <option value="geo">Geography</option>
-   <option value="sci">Science</option>
-   <option value="spe">Spelling</option>
-   <option value="vid">Video Game</option>
-   <option value="mov">Movies</option>
-   <option value="art">Artists</option>
-   <option value="fam">Famouse People/celebreties</option>
-   <option value="law">Law</option>
-   <option value="ran">Random</option>
-   </select>
-  </label>
-</section>
+    <section class="question">
+      <label for="drop-down">Choose Category: 
+        <select name="drop-down" id="categorySelect">
+          <option value="Arts & Literature">Arts and Literature</option>
+          <option value="Film & TV">Film and TV</option>
+          <option value="Food & Drink">Food and Drink</option>
+          <option value="General Knowledge">General Knowledge</option>
+          <option value="Geography">Geography</option>
+          <option value="History">History</option>
+          <option value="Music">Music</option>
+          <option value="Science">Science</option>
+          <option value="Society & Culture">Society and Culture</option>
+          <option value="Sport & Leisure">Sport and Leisure</option>
+        </select>
+      </label>
+    </section>
 <section class="number-of-ques">
    <label for="drop-downs"> Pick The Set Of Questions:  
     <select name="drop-down" id="drop-downs">
@@ -33,15 +33,15 @@
    </label>
 </section>
 <section class="start">
-  <button class="start">Start Quiz</button>
+  <button class="startButton">Start Quiz</button>
 </section>
-<section class="highscore">
-  <button class="score">View Highscors</button>
+<section class="scores">
+  <button class="score">View Scores</button>
 </section>
 </div>
 </div>
 
-<script src="/public/js/script.js"></script>
+<script src="/js/script.js"></script>
 
 
 
