--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,8 +3,8 @@
 <form class="form login-form">
   
   <div class="form-group">
-    <label for="email-login">email:</label>
-    <input class="form-input" type="text" id="email-login" />
+    <label for="userName-login">userName:</label>
+    <input class="form-input" type="text" id="userName-login" />
   </div>
   <div class="form-group">
     <label for="password-login">password:</label>
@@ -14,8 +14,8 @@
     <button class="btn btn-primary" type="submit">login</button>
   </div>
 </form>
- <div class="signup">
-    <button class="btn btn-primary" type="submit">Signup</button>
+ <div class="signUp">
+    <button class="btn btn-primary sign_up" type="submit">Signup</button>
   </div>
   <h4>Brought to you by: Thair,  Pat,  Sam and  Eddi</h4>
 
