--- a/views/quiz.handlebars
+++ b/views/quiz.handlebars
@@ -2,10 +2,12 @@
 
     <h2>{{question}}</h2>
     <div>
-        <button class="selectedAnswer" data-id="{{answerOne}}" question-id="{{id}}"> {{answerOne}} </button>
-        <button class="selectedAnswer" data-id="{{answerTwo}}" question-id="{{id}}"> {{answerTwo}} </button>
-        <button class="selectedAnswer" data-id="{{answerThree}}" question-id="{{id}}"> {{answerThree}} </button>
-        <button class="selectedAnswer" data-id="{{answerFour}}" question-id="{{id}}"> {{answerFour}} </button>
+        <button class="selectedAnswer" data-id="{{answerOne}}" question-id="{{id}}" category-id="{{category}}"> {{answerOne}} </button>
+        <button class="selectedAnswer" data-id="{{answerTwo}}" question-id="{{id}}" category-id="{{category}}"> {{answerTwo}}  </button>
+        <button class="selectedAnswer" data-id="{{answerThree}}" question-id="{{id}}" category-id="{{category}}"> {{answerThree}}</button>
+        <button class="selectedAnswer" data-id="{{answerFour}}" question-id="{{id}}" category-id="{{category}}"> {{answerFour}}</button>
     </div>
+
+<script src="/js/question.js"></script>
 
 </div>
