--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+{{!-- <!DOCTYPE html>
+<html lang="en"> --}}
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Big-Bad-Brain-Blender</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -29,8 +29,8 @@
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}}
-  <script src="/js/script.js"></script>
+  {{!-- <script src="/js/script.js"></script> --}}
 </body>
 
-
-</html>
+{{!-- 
+</html> --}}
