--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,47 +1,96 @@
-  <div class="row align-center mb-5">
-  <div class="col-md-6">
-    <!-- Call the helper function with triple brackets to render the span as HTML -->
+<form class="p-3 text-center">
+  <div class="form-group row-md-3 d-flex justify-content-around">
+    <div class="form-group">
+      <label for="category">Choose a category:</label>
+      <select id="inputCategory" class="form-control text-center">
+        <option selected>Select...</option>
+        <option value="his">History</option>
+        <option value="geo">Geography</option>
+        <option value="sci">Science</option>
+        <option value="spe">Spelling</option>
+        <option value="vid">Video Game</option>
+        <option value="mov">Movies</option>
+        <option value="art">Artists</option>
+        <option value="fam">Famous People/celebrities</option>
+        <option value="law">Law</option>
+        <option value="ran">Random</option>
+      </select>
+    </div>
   </div>
-  <div class="col-md-6">
-    <h3><a href=></a></h3>
-<section class="question">
-  <label for="drop-down">Choose Category: 
-   <select name="drop-down" id="drop-down">
-   <option value="his">History</option>
-   <option value="geo">Geography</option>
-   <option value="sci">Science</option>
-   <option value="spe">Spelling</option>
-   <option value="vid">Video Game</option>
-   <option value="mov">Movies</option>
-   <option value="art">Artists</option>
-   <option value="fam">Famouse People/celebreties</option>
-   <option value="law">Law</option>
-   <option value="ran">Random</option>
-   </select>
-  </label>
-</section>
-<section class="number-of-ques">
-   <label for="drop-downs"> Pick The Set Of Questions:  
-    <select name="drop-down" id="drop-downs">
-      <option value="5">5</option>
-      <option value="10">10</option>
-      <option value="15">15</option>
-      <option value="20">20</option>
-      <option value="25">25</option>
+  <div class="form-group row-md-3 d-flex justify-content-around">
+    <div>
+      <label for="difficulty">Difficulty:</label>
+      <select id="inputDifficulty" class="form-control text-center ">
+        <option selected>Select...</option>
+        <option value="easy">Easy</option>
+        <option value="med">Medium</option>
+        <option value="hard">Hard</option>
+      </select>
+    </div>
+    <div>
+      <label for="difficulty">Questions:</label>
+      <select id="inputDifficulty" class="form-control text-center">
+        <option selected>Select...</option>
+        <option value="five">5</option>
+        <option value="ten">10</option>
+        <option value="fifteen">15</option>
+        <option value="twenty">20</option>
+      </select>
+    </div>
+  </div>
+  <div class="form-group d-flex justify-content-around">
+    <div>
+      <button type="submit" class="btn btn-dark btn-md">High Score</button>
+    </div>
+    <div>
+      <button type="submit" class="btn btn-dark btn-md">Start</button>
+    </div>
+    <div>
+      <button type="submit" class="btn btn-dark btn-md">Log Out</button>
+    </div>
+  </div>
+</form>
 
-    </select>
-   </label>
-</section>
-<section class="start">
-  <button class="start">Start Quiz</button>
-</section>
-<section class="highscore">
-  <button class="score">View Highscors</button>
-</section>
-</div>
-</div>
+{{!-- <div>
+  <div>
+    <h3><a href=></a></h3>
+    <section class="question">
+      <label for="drop-down">Choose Category:
+        <select name="drop-down" id="drop-down">
+          <option value="nothing" hidden></option>
+          <option value="his">History</option>
+          <option value="geo">Geography</option>
+          <option value="sci">Science</option>
+          <option value="spe">Spelling</option>
+          <option value="vid">Video Game</option>
+          <option value="mov">Movies</option>
+          <option value="art">Artists</option>
+          <option value="fam">Famous People/celebrities</option>
+          <option value="law">Law</option>
+          <option value="ran">Random</option>
+        </select>
+      </label>
+    </section>
+    <section>
+      <label for="drop-downs"> Pick The Set Of Questions:
+        <select name="drop-down" id="drop-downs">
+          <option value="nothing" hidden></option>
+          <option value="5">5</option>
+          <option value="10">10</option>
+          <option value="15">15</option>
+          <option value="20">20</option>
+          <option value="25">25</option>
+
+        </select>
+      </label>
+    </section>
+    <section class="start">
+      <button class="start">Start Quiz</button>
+    </section>
+    <section class="highscore">
+      <button class="score">View Highscors</button>
+    </section>
+  </div>
+</div> --}}
 
 <script src="/public/js/script.js"></script>
-
-
-
