--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,23 +1,44 @@
-<h1>{{{get_emoji}}} Login to see the highest score  </h1>
-<link rel="stylesheet" href="/css/style.css">
+<form class="p-5 text-center card2">
+  <h1>Log In</h1>
+  <div class="form-group row-md-3 d-flex justify-content-around">
+    <div class="form-group">
+      <label for="exampleInputEmail1">Email address</label>
+      <input type="email" class="form-control text-center" id="exampleInputEmail1" aria-describedby="emailHelp">
+    </div>
+  </div>
+  <div class="form-group row-md-3 d-flex justify-content-around">
+    <div class="form-group row-md-3">
+      <label for="exampleInputPassword1">Password</label>
+      <input type="password" class="form-control text-center" id="exampleInputPassword1">
+    </div>
+  </div>
+  <button type="submit" class="btn btn-primary">Log In</button>
+  <button type="submit" class="btn btn-primary">Create Account</button>
+</form>
+
+
+
+
+
+
+{{!-- <h1>{{{get_emoji}}} Login to see the highest score </h1>
 <form class="form login-form">
-  
-  <div class="form-group">
+
+  <div>
     <label for="email-login">email:</label>
     <input class="form-input" type="text" id="email-login" />
   </div>
-  <div class="form-group">
+  <div>
     <label for="password-login">password:</label>
     <input class="form-input" type="password" id="password-login" />
   </div>
-  <div class="form-group">
+  <div>
     <button class="btn btn-primary" type="submit">login</button>
   </div>
 </form>
- <div class="signup">
-    <button class="btn btn-primary" type="submit">Signup</button>
-  </div>
-  <h4>Brought to you by: Thair,  Pat,  Sam and  Eddi</h4>
+<div>
+  <button class="btn btn-primary" type="submit">Sign Up</button>
+</div> --}}
 
 
 <script src="/js/login.js"></script>
