--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,17 +1,37 @@
-<div class="card">
-      <h3 class="card-header">Sign Up</h3>
-      <form id="signup-form" class="card-body">
-        <label for="username-signup" class="form-label">Username</label>
-        <input id="username-signup" type="text" class="form-input" />
-
-
-        <label class="form-label" for="password-signup">Password</label>
-        <input  id="password-signup" type="password" class="form-input" />
-
-        <button type="submit" class="btn">Signup!</button>
-        <a class="login-link" href="/login">Log in instead</a>
-      </form>
+<form class="text-center p-3 createForm card2 ">
+  <h1>Create Your Account</h1>
+  <div class="form-group d-flex justify-content-around">
+    <div class="form-group">
+      <label for="exampleInputEmail1">Email address</label>
+      <input type="email" class="form-control width" id="exampleInputEmail1" aria-describedby="emailHelp"
+        placeholder="E-mail">
     </div>
-    <span>Brought to by:Thair, Pat, Sam and Eddi</span>
+  </div>
+  <div class="form-group d-flex justify-content-around">
+    <div class="form-group">
+      <label for="exampleInputPassword1">Password</label>
+      <input type="password" class="form-control width" id="exampleInputPassword1" placeholder="Password">
+    </div>
+  </div>
+  <button type="submit" class="btn btn-primary">Log In</button>
+  <button type="submit" class="btn btn-primary">Create</button>
+</form>
+
+
+{{!-- <div class="card">
+  <h3 class="card-header">Sign Up</h3>
+  <form id="signup-form" class="card-body">
+    <label for="username-signup" class="form-label">Username</label>
+    <input id="username-signup" type="text" class="form-input" />
+
+
+    <label class="form-label" for="password-signup">Password</label>
+    <input id="password-signup" type="password" class="form-input" />
+
+    <button type="submit" class="btn">Signup!</button>
+    <a class="login-link" href="/login">Log in instead</a>
+  </form>
+</div>
+<span>Brought to by:Thair, Pat, Sam and Eddi</span> --}}
 
 <script src="/js/signup.js"></script>
