added css styling to quiz handelbar and results handlebar

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
 
 <body>
   <header class="display-flex justify-space-between align-center p-2">
-    <h3>
+    <h3 class="mainHeader">
       Welcome To Big-Bad-Brain-Blender
     </h3>
     {{#if logged_in}}
