--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -17,7 +17,7 @@
  <div class="signUp">
     <button class="btn btn-primary sign_up" type="submit">Signup</button>
   </div>
-  <h4>Brought to you by: Thair,  Pat,  Sam and  Eddi</h4>
+  <h4>Brought to you by: Thair,  Pat,  Sam and  Eddie</h4>
 
 
 <script src="/js/login.js"></script>
