combined the css stylesheets

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,28 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
 }
 
-body {
+:root {
+    --teal: #61eada;
+    --lightPurple: #ff99ff;
+    --darkPurple: #4d0099;
+    --lightgrey: #f2f2f2;
+    --vscode: #252934;
+}
+
+/* header {
+    text-align: center;
+    background-image: linear-gradient(to bottom right, var(--lightPurple), var(--teal), var(--lightPurple));
+} */
+
+.body-main {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -13,13 +32,6 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
 }
-
-/* main {
-  display: block;
-  flex-wrap: wrap;
-  margin-left: 10px;
-  justify-content: center;
-} */
 
 h1 {
   display: flex;
@@ -40,29 +52,39 @@ h2 {
   overflow: visible;
 }
 
+form {
+    margin: 5% auto;
+    width: 50%;
+    background-color: var(--lightgrey);
+    border-radius: 25px;
+}
 
-.mainHeader {
+.footer2 {
+    padding-right: 2%;
+    text-align: center;
+    position: sticky;
+    /* top: 100%; */
+    background-image: linear-gradient(to bottom right, var(--lightPurple), var(--teal));
+    margin-top: auto;
+    display: none;
+}
 
-h3 {
+span {
+    color: var(--darkPurple);
+}
 
-  display: flex;
+/* .card2 {
+    width: 25%;
+} */
+
+/* .mainHeader {
+   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   font-size: 3em;
-}
-
-
-/* h3 {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  font-size: 3em;
-
 } */
-
-
 
 h4 {
   margin-top: 50%;
@@ -75,8 +97,6 @@ label {
   margin-left: 0px;
   font: 0.9rem "Fira Sans", sans-serif;
 }
-
-
 
 input[type="submit"],
 label {
@@ -169,7 +189,6 @@ label {
   box-shadow: 0 0 5px var(--vscode);
 }
 
-
 .resultsPage {
   display: flex;
   flex-wrap: wrap;
@@ -227,6 +246,4 @@ label {
   border-radius: 20px;
   border: 1px solid rgba(255, 255, 255, 0.18);
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
-=======
-
 }
