--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -47,4 +47,4 @@ span {
 
 .card2 {
     width: 25%;
-}
+} */
