--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,18 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/style2.css">
+  <link rel="stylesheet" href="../css/style.css">
   {{!--
   <link rel="stylesheet" href="../css/style.css"> --}}
   <title>Big-Bad-Brain-Blender</title>
 </head>
 
-<body>
+<body class="body-main">
 
   <header class="display-flex justify-space-between align-center p-2">
-    <h3 class="mainHeader">
+    {{!-- <h3 class="mainHeader">
       Welcome To Big-Bad-Brain-Blender
-    </h3>
+    </h3> --}}
 
 
   <header>
@@ -37,7 +37,7 @@
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}}
-  <footer>
+  <footer class="footer2">
     <h4>Brought to you by: Thair, Pat, Sam and Eddi <span>2022</span></h4>
   </footer>
   <script src="/js/script.js"></script>
