--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,4 +1,5 @@
-{{!-- <!DOCTYPE html>
+{{!--
+<!DOCTYPE html>
 <html lang="en"> --}}
 
 <head>
@@ -6,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/style2.css">
+  <link rel="stylesheet" href="/css/style2.css">
   {{!--
   <link rel="stylesheet" href="../css/style.css"> --}}
   <title>Big-Bad-Brain-Blender</title>
@@ -20,27 +21,26 @@
     </h3>
 
 
-  <header>
-    <h1 class="display-4 mainHeading">Welcome To Big-Bad-Brain-Blender</h1>
-  </header>
+    <header>
+      <h1 class="display-4 mainHeading">Welcome To Big-Bad-Brain-Blender</h1>
+    </header>
 
-  <main>
+    <main>
 
-    {{#if logged_in}}
-    <nav>
-      <button class="btn" id="logout">logout</button>
-    </nav>
+      {{#if loggedIn}}
+      <nav>
+        <button class="btn" id="logout">logout</button>
+      </nav>
+      {{/if}}
+
+      {{{ body }}}
+    </main>
+    {{#if loggedIn}}
+    <script src="/js/logout.js"></script>
     {{/if}}
-
-    {{{ body }}}
-  </main>
-  {{#if logged_in}}
-  <script src="/js/logout.js"></script>
-  {{/if}}
-  <footer>
-    <h4>Brought to you by: Thair, Pat, Sam and Eddi <span>2022</span></h4>
-  </footer>
-  <script src="/js/script.js"></script>
+    <footer class="footer2">
+      <h4>Brought to you by: Thair, Pat, Sam and Eddi <span>2022</span></h4>
+    </footer>
 </body>
 
 
