--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,19 +1,19 @@
-<form class="p-5 text-center card2">
+<form class="p-5 text-center card2 login-form">
   <h1>Log In</h1>
   <div class="form-group row-md-3 d-flex justify-content-around">
     <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control text-center" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <label id=".login-form" for="userName">User Name</label>
+      <input id="userName-login" type="userName" class="form-control text-center" aria-describedby="emailHelp">
     </div>
   </div>
   <div class="form-group row-md-3 d-flex justify-content-around">
     <div class="form-group row-md-3">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control text-center" id="exampleInputPassword1">
+      <label for="password-login">Password</label>
+      <input id="password-login" type="password" class="form-control text-center">
     </div>
   </div>
   <button type="submit" class="btn btn-primary">Log In</button>
-  <button type="submit" class="btn btn-primary">Create Account</button>
+  <button type="submit" class="btn btn-primary sign_up">Create Account</button>
 </form>
 
 {{!-- <h1>{{{get_emoji}}} Login to see the highest score </h1>
@@ -31,10 +31,10 @@
   </div>
 </form>
 
- <div class="signUp">
-    <button class="btn btn-primary sign_up" type="submit">Signup</button>
-  </div>
-  <h4>Brought to you by: Thair,  Pat,  Sam and  Eddie</h4>
+<div class="signUp">
+  <button class="btn btn-primary sign_up" type="submit">Signup</button>
+</div>
+<h4>Brought to you by: Thair, Pat, Sam and Eddie</h4>
 
 <div>
   <button class="btn btn-primary" type="submit">Sign Up</button>
