--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,19 +1,18 @@
-<form class="text-center p-3 createForm card2 ">
+<form class="text-center p-3 createForm card2 " id="signup-form">
   <h1>Create Your Account</h1>
   <div class="form-group d-flex justify-content-around">
     <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control width" id="exampleInputEmail1" aria-describedby="emailHelp"
-        placeholder="E-mail">
+      <label for="userName">User Name</label>
+      <input type="userName" class="form-control width" id="username-signup" aria-describedby="emailHelp"
+        placeholder="User Name">
     </div>
   </div>
   <div class="form-group d-flex justify-content-around">
     <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control width" id="exampleInputPassword1" placeholder="Password">
+      <label for="password">Password</label>
+      <input type="password" class="form-control width" id="password-signup" placeholder="Password">
     </div>
   </div>
-  <button type="submit" class="btn btn-primary">Log In</button>
   <button type="submit" class="btn btn-primary">Create</button>
 </form>
 
