able to render final results

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,8 +12,10 @@
       <input id="password-login" type="password" class="form-control text-center">
     </div>
   </div>
+
   <button type="submit" class="btn btn-primary">Log In</button>
-  <button type="submit" class="btn btn-primary sign_up">Create Account</button>
+  
+  <button type="click" class="btn btn-primary sign_up">Create Account</button>
 </form>
 
 {{!-- <h1>{{{get_emoji}}} Login to see the highest score </h1>
