--- a/views/quiz.handlebars
+++ b/views/quiz.handlebars
@@ -4,10 +4,10 @@
     <section class="question-container">
         <div class="question-section">{{question}}</div>
             <div class="answer-grid">
-                <button class="selectedAnswer" data-id="{{answerOne}}" question-id="{{id}}" category-id="{{category}}"> {{answerOne}} </button>
-                <button class="selectedAnswer" data-id="{{answerTwo}}" question-id="{{id}}" category-id="{{category}}"> {{answerTwo}}  </button>
-                <button class="selectedAnswer" data-id="{{answerThree}}" question-id="{{id}}" category-id="{{category}}"> {{answerThree}}</button>
-                <button class="selectedAnswer" data-id="{{answerFour}}" question-id="{{id}}" category-id="{{category}}"> {{answerFour}}</button>
+                <button class="selectedAnswer" data-id="{{answerOne}}" question-id="{{id}}" category-id="{{category}}" correctAnswer-id ="{{correctAnswer}}"> {{answerOne}} </button>
+                <button class="selectedAnswer" data-id="{{answerTwo}}" question-id="{{id}}" category-id="{{category}}" correctAnswer-id ="{{correctAnswer}}"> {{answerTwo}}  </button>
+                <button class="selectedAnswer" data-id="{{answerThree}}" question-id="{{id}}" category-id="{{category}}" correctAnswer-id ="{{correctAnswer}}"> {{answerThree}}</button>
+                <button class="selectedAnswer" data-id="{{answerFour}}" question-id="{{id}}" category-id="{{category}}" correctAnswer-id ="{{correctAnswer}}"> {{answerFour}}</button>
             </div>
     </section>
 {{!-- </body> --}}
