Heroku initial commit

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -27,9 +27,11 @@
       </select>
     </div>
   </div>
+  </form>
+
   <div class="form-group d-flex justify-content-around">
     <div>
-      <button type="submit" class="btn btn-dark btn-md ">High Score</button>
+      <button type="submit" class="btn btn-dark btn-md " id="resultsButton">High Score</button>
     </div>
     <div>
       <button type="submit" class="btn btn-dark btn-md startButton">Start</button>
@@ -38,51 +40,8 @@
       <button id="logout" type="submit" class="btn btn-dark btn-md">Log Out</button>
     </div>
   </div>
-</form>
+{{!-- </form> --}}
 
 
 <script src="/js/script.js"></script>
-<script src="/js/logout.js"></script>
-
-{{!-- <div class="row align-center mb-5">
-  <div class="col-md-6">
-    <!-- Call the helper function with triple brackets to render the span as HTML -->
-  </div>
-  <div class="col-md-6">
-    <h3><a href=></a></h3>
-    <section class="question">
-      <label for="drop-down">Choose Category:
-        <select name="drop-down" id="categorySelect">
-          <option value="Arts & Literature">Arts and Literature</option>
-          <option value="Film & TV">Film and TV</option>
-          <option value="Food & Drink">Food and Drink</option>
-          <option value="General Knowledge">General Knowledge</option>
-          <option value="Geography">Geography</option>
-          <option value="History">History</option>
-          <option value="Music">Music</option>
-          <option value="Science">Science</option>
-          <option value="Society & Culture">Society and Culture</option>
-          <option value="Sport & Leisure">Sport and Leisure</option>
-        </select>
-      </label>
-    </section>
-    <section class="number-of-ques">
-      <label for="drop-downs"> Pick The Set Of Questions:
-        <select name="drop-down" id="drop-downs">
-          <option value="5">5</option>
-          <option value="10">10</option>
-          <option value="15">15</option>
-          <option value="20">20</option>
-          <option value="25">25</option>
-        </select>
-      </label>
-    </section>
-    <section class="start">
-      <button class="startButton">Start Quiz</button>
-    </section>
-    <section class="scores">
-      <button class="score">View Scores</button>
-    </section>
-  </div>
-</div>
-<script src="/js/script.js"></script> --}}
+{{!-- <script src="/js/logout.js"></script> --}}
