--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -29,19 +29,16 @@
   </div>
   </form>
 
-  <div class="form-group d-flex justify-content-around">
-    <div>
+  <div class="form-group d-flex justify-content-center m-3">
+    <div class="mr-3">
       <button type="submit" class="btn btn-dark btn-md " id="resultsButton">High Score</button>
     </div>
     <div>
       <button type="submit" class="btn btn-dark btn-md startButton">Start</button>
     </div>
-    <div>
-      <button id="logout" type="submit" class="btn btn-dark btn-md">Log Out</button>
-    </div>
   </div>
-{{!-- </form> --}}
+
 
 
 <script src="/js/script.js"></script>
-{{!-- <script src="/js/logout.js"></script> --}}
+
