--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
 
       {{#if loggedIn}}
       <nav>
-        <button class="btn" id="logout">logout</button>
+        <button class="logoutBtn" id="logout">logout</button>
       </nav>
       {{/if}}
 
