--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,9 +14,10 @@
   </div>
 
     <button type="submit" class="btn btn-primary">Log In</button>
+    <button type="button" class="btn btn-primary sign_up">Create Account</button>
   </form>
 
-  <button type="click" class="btn btn-primary sign_up">Create Account</button>
+ 
 {{!-- </form> --}}
 
 
